@@ -18,14 +18,14 @@ package de.cuioss.portal.core.test.mocks.configuration;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.nio.file.Paths;
-
 import jakarta.inject.Inject;
 
 import org.jboss.weld.junit5.auto.EnableAutoWeld;
 import org.junit.jupiter.api.Test;
 
 import de.cuioss.portal.configuration.schedule.PortalFileWatcherService;
+
+import java.nio.file.Path;
 import de.cuioss.test.valueobjects.junit5.contracts.ShouldBeNotNull;
 import lombok.Getter;
 
@@ -40,9 +40,9 @@ class FileWatcherServiceMockTest implements ShouldBeNotNull<FileWatcherServiceMo
     @Test
     void shouldHandlePaths() {
         assertTrue(underTest.getRegisteredPaths().isEmpty());
-        underTest.register(Paths.get("/"));
+        underTest.register(Path.of("/"));
         assertFalse(underTest.getRegisteredPaths().isEmpty());
-        underTest.unregister(Paths.get("/"));
+        underTest.unregister(Path.of("/"));
         assertTrue(underTest.getRegisteredPaths().isEmpty());
     }
 }
